$Id: ChangeLog,v 1.5 2007-12-29 01:54:01 karl Exp $

2007-12-28 karl
    * When invoked as a shell, [info nameofexecutable] returns nothing.

      Detect that condition and, if so, use the SHELL environment variable
      to form the basis of what we do.  For instance, if the shell is 
      /usr/local/bin/farsh, we'll run /usr/local/lib/farsh/main.tcl.

2007-12-03 karl
    * Make sure tcllauncher gets installed into the bin directory.

2007-11-24 karl
    * When allocating memory to fiddle command line arguments before
      invoking Tcl_Main, use malloc instead of ckalloc because whatever
      ckalloc needs hasn't necessarily been initialized yet.

    * Using $(COMPILE) instead of $(CC) for compiling the main routine
      makes it work on FreeBSD as well as the Mac.

2007-10-19 karl
    * Changes to tcllauncher.tcl make it actually do what it's supposed
      to do.